--- a/pages/productDetail.html
+++ b/pages/productDetail.html
@@ -10,7 +10,7 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/detail.css">
 </head>
 
 <body>
@@ -37,16 +37,16 @@
                     <a class="nav-link" href="../pages/about-as.html">Acerca de</a>
                 </li>
             </ul>
-            <ul class="nav-list-admin"  id="nav-list-admin">
+            <ul class="nav-list-admin" id="nav-list-admin">
             </ul>
         </nav>
-        
-
         <div class="user-menu" id="user-menu">
-            <a class="label-usuario" ></a>
+            <a class="label-usuario"></a>
         </div>
     </header>
+    <main class="main" id="main">
 
+    </main>
     <footer class="main-footer">
         <section class="redes-sociales">
             <ul>
@@ -87,8 +87,8 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/inicialData.js"></script>
-    <script src="../js/login.js"></script>
     <script src="../js/header.js"></script>
+    <script src="../js/details.js"></script>
 </body>
 
 </html>
